--- a/frontEnd/app/package.json
+++ b/frontEnd/app/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
+    "fontawesome-free": "^1.0.4",
+    "free": "^1.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
