--- a/frontEnd/app/package.json
+++ b/frontEnd/app/package.json
@@ -23,8 +23,10 @@
     "fontawesome": "^5.6.3",
     "fontawesome-free": "^1.0.4",
     "free": "^1.0.0",
+    "primeicons": "^5.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "primeng": "^13.4.1",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
